# mairie-radar

./: ARCHITECTURE.md  README.md  TODO.md  pyproject.toml
backend/agents/: base.py  test_agent.py
backend/api/: main.py
backend/core/: config.py
backend/rag/: base.py
frontend/: README.md  package.json  tailwind.config.js
maire/: .env.example  main.py  pyproject.toml
maire/maire/core/: config.py  logging.py
maire/maire/etl/: base.py
